src/mainview/app.css
@import "tailwindcss";
@import "tw-animate-css";
@import "@fontsource-variable/inter";
/* @import "layerchart/shadcn-svelte.css"; */
/* @plugin "@tailwindcss/forms"; */

@custom-variant dark (&:where(.dark, .dark *));

:root {
  --background: oklch(1 0 0);
  /* --bg-background: oklch(96.416% 0.00011 271.152); */
  --body-background: oklch(0.972 0.003 322.12);
  /* --body-background: oklch(0.972 0 0); */
  /* --background: oklch(96.416% 0.00011 271.152); */
  --foreground: oklch(0.145 0.008 326);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.145 0.008 326);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0.008 326);
  --primary: oklch(0.212 0.019 322.12);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.96 0.003 325.6);
  --secondary-foreground: oklch(0.212 0.019 322.12);
  --muted: oklch(0.96 0.003 325.6);
  --muted-foreground: oklch(0.542 0.034 322.5);
  --accent: oklch(0.96 0.003 325.6);
  --accent-foreground: oklch(0.212 0.019 322.12);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.922 0.005 325.62);
  /* --input: oklch(0.212 0.019 322.12 / 10%); */
  /* --input: oklch(0.922 0.005 325.62); */
  /* --input: oklch(89.267% 0.00697 324.956); */
  --input: oklch(0.212 0.019 322.12 / 20%);
  --input-background: oklch(1 0 0);
  --ring: oklch(0.711 0.019 323.02);
  --chart-1: oklch(0.845 0.143 164.978);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.596 0.145 163.225);
  --chart-4: oklch(0.508 0.118 165.612);
  --chart-5: oklch(0.432 0.095 166.913);
  --chart-6: oklch(0.646 0.222 41.116);
  --chart-7: oklch(0.627 0.265 303.9);
  --chart-8: oklch(0.769 0.188 70.08);
  --radius: 0.45rem;
  /* --sidebar: oklch(0.985 0 0); */
  /* --sidebar: oklch(92.277% 0.0054 16.188); */
  /* --sidebar: oklch(0.912 0 0); */
  --sidebar: oklch(0.912 0.012 322.12);
  --sidebar-foreground: oklch(0.145 0.008 326);
  --sidebar-primary: oklch(0.212 0.019 322.12);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  /* --sidebar-accent: oklch(0.96 0.003 325.6); */
  /* --sidebar-accent: oklch(0.026286 0.02396 320.069 / 85%); */
  --sidebar-accent: oklch(0.3 0.019 322.12 / 85%);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  /* --sidebar-accent: oklch(100% 0.00011 271.152 / 0.8); */
  /* --sidebar-accent-foreground: oklch(0.212 0.019 322.12); */
  --sidebar-border: oklch(0.922 0.005 325.62);
  --sidebar-ring: oklch(0.711 0.019 323.02);
}

.dark {
  /* --background: oklch(0.145 0.008 326); */
  --background: oklch(0.212 0.019 322.12);
  --body-background: oklch(0.24 0.019 322.12);
  /* --body-background: oklch(24.608% 0.01668 325.992); */
  /* --background: oklch(28.662% 0.02798 321.079); */
  --foreground: oklch(0.985 0 0);
  --card: oklch(0.212 0.019 322.12);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.212 0.019 322.12);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.922 0.005 325.62);
  --primary-foreground: oklch(0.212 0.019 322.12);
  --secondary: oklch(0.263 0.024 320.12);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.263 0.024 320.12);
  --muted-foreground: oklch(0.711 0.019 323.02);
  --accent: oklch(0.263 0.024 320.12);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 20%);
  --input-background: oklch(0.212 0.019 322.12);
  --ring: oklch(0.542 0.034 322.5);
  --chart-1: oklch(0.845 0.143 164.978);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.596 0.145 163.225);
  --chart-4: oklch(0.508 0.118 165.612);
  --chart-5: oklch(0.432 0.095 166.913);
  --chart-6: oklch(0.646 0.222 41.116);
  --chart-7: oklch(0.627 0.265 303.9);
  --chart-8: oklch(0.769 0.188 70.08);
  /* --sidebar: oklch(0.212 0.019 322.12); */
  --sidebar: oklch(0.3 0.019 322.12);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  /* --sidebar-accent: oklch(0.263 0.024 320.12); */
  /* --sidebar-accent-foreground: oklch(0.985 0 0); */
  /* --sidebar-accent: oklch(0.96025 0.00346 324.13 / 85%); */
  --sidebar-accent: oklch(0.912 0.012 322.12 / 85%);
  --sidebar-accent-foreground: oklch(0.212 0.019 322.12);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.542 0.034 322.5);
}

@theme inline {
  --font-sans: "Inter Variable", sans-serif;
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-chart-6: var(--chart-6);
  --color-chart-7: var(--chart-7);
  --color-chart-8: var(--chart-8);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --color-foreground: var(--foreground);
  --color-background: var(--background);
  --radius-sm: calc(var(--radius) * 0.6);
  --radius-md: calc(var(--radius) * 0.8);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) * 1.4);
  --radius-2xl: calc(var(--radius) * 1.8);
  --radius-3xl: calc(var(--radius) * 2.2);
  --radius-4xl: calc(var(--radius) * 2.6);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
  html {
    @apply font-sans;
  }
}

@custom-variant data-open {
  &:where([data-state="open"]),
  &:where([data-open]:not([data-open="false"])) {
    @slot;
  }
}

@custom-variant data-closed {
  &:where([data-state="closed"]),
  &:where([data-closed]:not([data-closed="false"])) {
    @slot;
  }
}

@custom-variant data-checked {
  &:where([data-state="checked"]),
  &:where([data-checked]:not([data-checked="false"])) {
    @slot;
  }
}

@custom-variant data-unchecked {
  &:where([data-state="unchecked"]),
  &:where([data-unchecked]:not([data-unchecked="false"])) {
    @slot;
  }
}

@custom-variant data-selected {
  &:where([data-selected]) {
    @slot;
  }
}

@custom-variant data-disabled {
  &:where([data-disabled="true"]),
  &:where([data-disabled]:not([data-disabled="false"])) {
    @slot;
  }
}

@custom-variant data-active {
  &:where([data-state="active"]),
  &:where([data-active]:not([data-active="false"])) {
    @slot;
  }
}

@custom-variant data-horizontal {
  &:where([data-orientation="horizontal"]) {
    @slot;
  }
}

@custom-variant data-vertical {
  &:where([data-orientation="vertical"]) {
    @slot;
  }
}

@utility no-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
  &::-webkit-scrollbar {
    display: none;
  }
}

